Fixed bug #43703 (Signature compatibility check broken)